# gdb-frontend

./: .gitignore  CMakeLists.txt
src/: GDBConsole.cpp  GDBConsole.hpp  Logger.cpp  Logger.hpp  TextEditor.cpp  TextEditor.h  breakpointwindow.cpp  breakpointwindow.hpp  gdb.cpp  gdb.hpp  gdbconsole.cpp  gdbconsole.hpp  gdbwindows.cpp  gdbwindows.hpp  glad.c  main.cpp  mainwindow.cpp  mainwindow.hpp  sourcewindow.cpp  sourcewindow.hpp  stackwindow.cpp  stackwindow.hpp  utils.cpp  utils.hpp  variablesWindow.cpp  variablesWindow.hpp
src/glad/: glad.h
src/imgui/: imconfig.h  imgui.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw_gl3.cpp  imgui_impl_opengl3.cpp
